--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <h1 id="h1text"> Hey There! </h1>
     <p id="ptext"> Do you see me? This is eyes from the bushes. I'm not here to ask you to light up my spooky eyes. I'm here to tell you something important.
         Press on the spooky button to know 👻</p>
-   <button"><a href="wishespage.html"><h3>Spooky Button</h3></a></button>
+   <button><a href="wishespage.html"><h3>Spooky Button</h3></a></button>
     <script src="./app.js"></script>
 </body>
 
