--- a/wishespage.html
+++ b/wishespage.html
@@ -10,7 +10,7 @@
 
 <body>
    <h1> Happy Halloween </h1>
-   <p> It's 31st October and it's raning pumpkins. And, that means it's Halloweeen. AllHalloWeen, Hallo means holy and even meaning evening. That's how Halloween was formed. Dressing up as spirits & ghosts is a part of Halloween. It's because people believe that wearing scary customes would keep the evils spirits away. That's also the reason why people carve pumpkin & keep it outside home to ward of ghosts.</p>
+   <p> It's 31st October and it's raining pumpkins. And, that means it's Halloweeen. AllHalloWeen, Hallo means holy and ween meaning evening. That's how Halloween was formed. Dressing up as spirits & ghosts is a part of Halloween. It's because people believe that wearing scary costumes would keep the evils spirits away. That's also the reason why people carve pumpkin & keep it outside home to ward off ghosts.</p>
     
    <div class="pumpkins">
 
